# ChangeLog for games-strategy/wesnoth
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.109 2007/11/26 01:41:33 mr_bones_ Exp $

*wesnoth-1.2.8 (26 Nov 2007)

  26 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.8.ebuild:
  version bump

  22 Oct 2007; Mike Doty <kingtaco@gentoo.org> wesnoth-1.2.7.ebuild:
  amd64 stable, bug 195520

  18 Oct 2007; Ferris McCormick <fmccor@gentoo.org> wesnoth-1.2.7.ebuild:
  Sparc stable --- Security Bug #195520 --- Looks good.

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> wesnoth-1.2.7.ebuild:
  Stable on ppc64; bug #195520

  12 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  wesnoth-1.2.7.ebuild:
  ppc stable, bug #195520

  12 Oct 2007; Christian Faulhammer <opfer@gentoo.org> wesnoth-1.2.7.ebuild:
  stable x86, security bug 195520

*wesnoth-1.2.7 (08 Oct 2007)

  08 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.7.ebuild:
  version bump

  20 Sep 2007; Christoph Mende <angelos@gentoo.org> wesnoth-1.2.6.ebuild:
  Stable on amd64 wrt bug #190846

  20 Sep 2007; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.2.6.ebuild:
  libsdl X use check seems to be fixed now (bug #193169)

  17 Sep 2007; Joseph Jezak <josejx@gentoo.org> wesnoth-1.2.6.ebuild:
  Marked ppc/ppc64 stable for bug #190846.

  17 Sep 2007; Ferris McCormick <fmccor@gentoo.org> wesnoth-1.2.6.ebuild:
  Sparc stable --- Bug #190846 --- it's been working fine.

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> wesnoth-1.2.6.ebuild:
  Keyworded ~x86-fbsd, #183706 thanks to Nathan Smith.

  28 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org> wesnoth-1.2.5.ebuild:
  Stable on amd64 wrt bug #186446.

*wesnoth-1.2.6 (26 Jul 2007)

  26 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.6.ebuild:
  version bump

  26 Jul 2007; Christian Faulhammer <opfer@gentoo.org> wesnoth-1.2.5.ebuild:
  stable x86, bug 186446
