@@ -2,27 +2,19 @@ AUX wesnothd.rc 619 RMD160 b3d7a303f27ce3cc1886fd7791ab58f58356ac39 SHA1 8ba6dad
 MD5 2238ca275d6ab646096d612c46b1eb05 files/wesnothd.rc 619
 RMD160 b3d7a303f27ce3cc1886fd7791ab58f58356ac39 files/wesnothd.rc 619
 SHA256 23e250272768e1fb540104b96c96a24da09fedc9f89a6867adcae046160c0065 files/wesnothd.rc 619
-DIST wesnoth-1.2.7.tar.bz2 73123521 RMD160 eb5944aa218d1dc1c68bcde5fdc09f2fc6079fbf SHA1 04ebdda9fe7ed8d728343331e2d37fe01f12ad16 SHA256 8d2d2c2a086435aafbcfc017691022c7d9f280e3466f97d6ba3f6e440ec8a442
 DIST wesnoth-1.2.8.tar.bz2 73123148 RMD160 f085684005dc02d4fbe7802bdb0844a5a531a5c4 SHA1 da02b2bf952d4e309e47ce332930c1509e9a4d2e SHA256 6abc75fbb28a2d506a4d152cf79703f3920a8d1021bab32b1583b004c2ab298c
-EBUILD wesnoth-1.2.7.ebuild 2814 RMD160 12c323be9689822516f6c5102acc89e7909c97ce SHA1 122fcb8e9f59a23d25f3e344d82248dcf7030c40 SHA256 e828236274c39144b84830e8983b1442f041576538b5d8672053d3ba9ca21f6d
-MD5 f4877f0a3c51d51504e9d5b2faff3e83 wesnoth-1.2.7.ebuild 2814
-RMD160 12c323be9689822516f6c5102acc89e7909c97ce wesnoth-1.2.7.ebuild 2814
-SHA256 e828236274c39144b84830e8983b1442f041576538b5d8672053d3ba9ca21f6d wesnoth-1.2.7.ebuild 2814
-EBUILD wesnoth-1.2.8.ebuild 2820 RMD160 a0d24a666eecdc9855ff00c2bc5a7e2d6a0e4e6a SHA1 906c6e8f1cb54ac8a6cf64b1024218ffee11af23 SHA256 3c423acd451c8716fee751149972495a40ec2a2ae3e7545991f041db6c6be1d0
-MD5 ee4d87a5f7b1e9ec3e9013ca72879805 wesnoth-1.2.8.ebuild 2820
-RMD160 a0d24a666eecdc9855ff00c2bc5a7e2d6a0e4e6a wesnoth-1.2.8.ebuild 2820
-SHA256 3c423acd451c8716fee751149972495a40ec2a2ae3e7545991f041db6c6be1d0 wesnoth-1.2.8.ebuild 2820
-MISC ChangeLog 14459 RMD160 a5efeefb8ecc13c684c6fdaa3950105870659c71 SHA1 8849e61190149577ecc987733dd98f52e203182e SHA256 7117b68540316242fb448204b9b441d76e9a751e0441f1770e1aa60ab4d29328
-MD5 1b3dbb617464040b7f195990741cb0da ChangeLog 14459
-RMD160 a5efeefb8ecc13c684c6fdaa3950105870659c71 ChangeLog 14459
-SHA256 7117b68540316242fb448204b9b441d76e9a751e0441f1770e1aa60ab4d29328 ChangeLog 14459
+EBUILD wesnoth-1.2.8.ebuild 2815 RMD160 b82548ec1cdded5a37bf9e538c92f3b2bb061bfc SHA1 cd071c23a11914e8c843316fe5fcfaaa1da415e9 SHA256 fc1658276598d110ba18d7e80ad488de36c14fe39b99a76a03f65e9ff74a9b9a
+MD5 eaae6e34878f62f4fb6033de99ea3def wesnoth-1.2.8.ebuild 2815
+RMD160 b82548ec1cdded5a37bf9e538c92f3b2bb061bfc wesnoth-1.2.8.ebuild 2815
+SHA256 fc1658276598d110ba18d7e80ad488de36c14fe39b99a76a03f65e9ff74a9b9a wesnoth-1.2.8.ebuild 2815
+MISC ChangeLog 14615 RMD160 22babe7763ec622cf0c118b06dcecfb56e74636d SHA1 3cd102c4b54cfd72fa4495a1ac6182b41e9892aa SHA256 f15cbac9bb9d4c7e3b669d9d1d4a0b21e5570b437bece0e0ba6079322009ca71
+MD5 f6ae593eb5090789d5b39fbf6f2dbeae ChangeLog 14615
+RMD160 22babe7763ec622cf0c118b06dcecfb56e74636d ChangeLog 14615
+SHA256 f15cbac9bb9d4c7e3b669d9d1d4a0b21e5570b437bece0e0ba6079322009ca71 ChangeLog 14615
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
-MD5 9df16f7340d6944c57d1b28ad71aee3c files/digest-wesnoth-1.2.7 250
-RMD160 8f1c5a64b4ed27e6971f548916d947dc8d6e79ef files/digest-wesnoth-1.2.7 250
-SHA256 077f8ef7ecc58e6eadea868671c9b2d4eec55577112f899898ad48902cd6a465 files/digest-wesnoth-1.2.7 250
 MD5 80a96fd9ef94393ae8a8e0d0ca0cefa3 files/digest-wesnoth-1.2.8 250
 RMD160 f7ab7a70c9b9a4ca2ff9e7b7b65e398ad56a63b0 files/digest-wesnoth-1.2.8 250
 SHA256 9139f16c5dd0b618533a4d1a41f281e28b6bd1c8e30116f2ec300ca22f8c9fb4 files/digest-wesnoth-1.2.8 250
