@@ -1,3 +1,0 @@
-MD5 f80482cf0dc4379c0bbbf6337f43ea2c wesnoth-1.2.7.tar.bz2 73123521
-RMD160 eb5944aa218d1dc1c68bcde5fdc09f2fc6079fbf wesnoth-1.2.7.tar.bz2 73123521
-SHA256 8d2d2c2a086435aafbcfc017691022c7d9f280e3466f97d6ba3f6e440ec8a442 wesnoth-1.2.7.tar.bz2 73123521
